Add LSP integration with configurable stdlib path
Implements Language Server Protocol support for pony-lsp (v0.2.2):
- Add Cargo.toml with zed_extension_api dependency for Rust/WASM compilation
- Add src/pony.rs implementing Extension trait with language_server_command method
- Configure PONYPATH environment variable from project root and user-configured stdlib path
- Add configurable pony_stdlib_path setting in extension.toml
- Update extension.toml to register pony-language-server and bump version to 0.2.0
- Update README.md with LSP installation, configuration instructions, and troubleshooting
- Build and include extension.wasm binary
- Add target/ to .gitignore for Rust build artifacts

Configuration required:
Users must configure pony_stdlib_path in Zed settings to point to their Pony
standard library packages directory (e.g., /opt/homebrew/Cellar/ponyc/0.60.4/packages).
The extension uses this to construct PONYPATH for the LSP server.

LSP features currently working:
- Go to definition (Cmd+Click on symbols)
- Document symbols (outline/navigation)

Note: Features like hover, completion, and find references are not yet implemented
in pony-lsp v0.2.2 itself.

--- a/extension.toml
+++ b/extension.toml
@@ -1,7 +1,7 @@
 id = "pony"
 name = "Pony"
-description = "Pony language support with syntax highlighting"
-version = "0.1.0"
+description = "Pony language support with syntax highlighting and LSP integration"
+version = "0.2.0"
 schema_version = 1
 authors = ["Orien Madgwick <497874+orien@users.noreply.github.com>"]
 repository = "https://github.com/orien/pony-zed-extension"
@@ -9,3 +9,12 @@ repository = "https://github.com/orien/pony-zed-extension"
 [grammars.pony]
 repository = "https://github.com/tree-sitter-grammars/tree-sitter-pony"
 commit = "73ff874ae4c9e9b45462673cbc0a1e350e2522a7"
+
+[language_servers.pony-language-server]
+name = "Pony Language Server"
+languages = ["Pony"]
+
+[settings.pony_stdlib_path]
+type = "string"
+default = ""
+description = "Path to the Pony standard library packages directory. Find it with: readlink -f $(which ponyc) | sed 's|/bin/ponyc|/packages|'. Example: /opt/homebrew/Cellar/ponyc/0.60.4/packages"
